<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ui.IdentifyBreedActivity">

    <ImageView
        android:id="@+id/ivDogImage"
        android:layout_width="0dp"
        android:layout_height="249dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/dog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <Spinner
        android:id="@+id/spBreeds"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/sp_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDogImage" />

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bt_background"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spBreeds"
        app:layout_constraintStart_toStartOf="@+id/spBreeds"
        app:layout_constraintTop_toBottomOf="@+id/spBreeds"
        app:layout_constraintVertical_bias="0.13999999" />

    <Button
        android:id="@+id/btNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/next"
        android:visibility="gone"
        android:background="@drawable/bt_background"
        app:layout_constraintEnd_toEndOf="@+id/spBreeds"
        app:layout_constraintStart_toStartOf="@+id/spBreeds"
        app:layout_constraintTop_toBottomOf="@+id/spBreeds" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/spBreeds"
        app:layout_constraintEnd_toEndOf="@+id/spBreeds"
        app:layout_constraintTop_toTopOf="@+id/spBreeds"
        app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
        android:contentDescription="@string/drop_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>